[gd_scene load_steps=2 format=3 uid="uid://b3is2c3ad72tg"]

[ext_resource type="Script" path="res://character_line.gd" id="1_pe5rd"]

[node name="CharacterLine" type="HBoxContainer"]
size_flags_vertical = 3
script = ExtResource("1_pe5rd")

[node name="LineEdit" type="LineEdit" parent="."]
custom_minimum_size = Vector2(215, 0)
layout_mode = 2
size_flags_horizontal = 2
text = "Brunnera"
editable = false

[node name="Save" type="Button" parent="."]
visible = false
layout_mode = 2
text = "Save Change"

[node name="Edit" type="Button" parent="."]
layout_mode = 2
size_flags_horizontal = 3
text = "Edit"

[node name="Delete" type="Button" parent="."]
layout_mode = 2
size_flags_horizontal = 8
text = "Delete"

[connection signal="text_submitted" from="LineEdit" to="." method="_on_save_button_down"]
[connection signal="button_down" from="Save" to="." method="_on_save_button_down"]
[connection signal="button_down" from="Edit" to="." method="_on_edit_button_down"]
[connection signal="button_down" from="Delete" to="." method="_on_delete_button_down"]
